--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </header>
     
     <div class="container">
-        <input type="text" id="searchInput" placeholder="Buscar artículo o descripción...">
+        <input type="text" id="searchInput" placeholder="Buscar artículo o cargos...">
         
         <div class="summary" id="resumen">
             <h3><i class="fas fa-clipboard-list"></i> CARGOS SELECCIONADOS</h3>
@@ -208,7 +208,7 @@
         <table class="penalTable">
             <thead>
                 <tr>
-                    <th>Descripción</th>
+                    <th>cargos</th>
                     <th>Minutos</th>
                     <th>Multa</th>
                     <th>Fianza</th>
@@ -278,7 +278,7 @@
             <thead>
                 <tr>
                     <th>Artículo</th>
-                    <th>Descripción</th>
+                    <th>cargos</th>
                     <th>Minutos</th>
                     <th>Multa</th>
                     <th>Fianza</th>
@@ -392,7 +392,7 @@
             <thead>
                 <tr>
                     <th>Artículo</th>
-                    <th>Descripción</th>
+                    <th>cargos</th>
                     <th>Minutos</th>
                     <th>Multa</th>
                     <th>Fianza</th>
@@ -534,7 +534,7 @@
             <thead>
                 <tr>
                     <th>Artículo</th>
-                    <th>Descripción</th>
+                    <th>cargos</th>
                     <th>Minutos</th>
                     <th>Multa</th>
                     <th>Fianza</th>
@@ -585,7 +585,7 @@
             <thead>
                 <tr>
                     <th>Artículo</th>
-                    <th>Descripción</th>
+                    <th>cargos</th>
                     <th>Minutos</th>
                     <th>Multa</th>
                     <th>Fianza</th>
@@ -713,7 +713,7 @@
             <thead>
                 <tr>
                     <th>Artículo</th>
-                    <th>Descripción</th>
+                    <th>cargos</th>
                     <th>Minutos</th>
                     <th>Multa</th>
                     <th>Fianza</th>
