--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Código Penal LSPD</title>
+    <title>Department of Justice</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
