--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 </head>
 <body>
     <header style="display: flex; align-items: center; justify-content: center; gap: 15px;">
-    <img src="https://i.imgur.com/UWq89vP.png" alt="DOJ Logo" style="height: 30px;">
+    <img src="https://i.imgur.com/jsSGxXl.png" alt="DOJ Logo" style="height: 30px;">
     <span style="font-size: 1em;">Department of Justice</span>
 </header>
     
