--- a/index.html
+++ b/index.html
@@ -187,9 +187,8 @@
     </style>
 </head>
 <body>
-    <header style="display: flex; align-items: center; justify-content: center; gap: 15px;">
-    <img src="https://i.imgur.com/jsSGxXl.png" alt="DOJ Logo" style="height: 30px;">
-    <span style="font-size: 1em;">Department of Justice</span>
+    <header> 
+        <img src="https://i.imgur.com/fIEstge.png" alt="Título Código Penal" style="max-width: 100%; height: auto;">
 </header>
     
     <div class="container">
