--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
     </style>
 </head>
 <body>
-    <header> 
-        <img src="https://i.imgur.com/fIEstge.png" alt="Título Código Penal" style="max-width: 100%; height: auto;">
-</header>
+    <header>
+        <img src="https://i.imgur.com/jsSGxXl.png" alt="Título Código Penal" style="max-width: 100%; height: auto;">
+    </header>
     
     <div class="container">
         <input type="text" id="searchInput" placeholder="Buscar artículo o cargos...">
