--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         </table>
 
         <!-- Calculadora de Multas por Armas -->
-        <div class="category">Multas por Armas</div>
+        <div class="category">Caldculadora de Multas por Armas</div>
         <table class="multas-armas">
             <thead>
                 <tr>
