--- a/index.html
+++ b/index.html
@@ -460,9 +460,8 @@
         </table>
 
         <!-- Calculadora de Multas por Armas -->
-        <div class="calculadora-container">
-            <div class="calculadora-header">Calculadora de Multas por Armas</div>
-            <table class="multas-armas">
+        <div class="category">Calculadora de Multas por Armas</div>
+        <table class="multas-armas">
                 <thead>
                     <tr>
                         <th>TIPO DE ARMA</th>
