--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Department of Justice</title>
     <style>
         body {
-            font-family: "Eurostile Bold Extended", sans-serif;
+            font-family: "Eurostile Bold Extended", sans-serif !important;
+            font-weight: bold !important;
             background-color: #f0f0f0;
             color: #333;
             margin: 0;
@@ -16,6 +17,7 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-attachment: fixed;
+
         }
         header {
             background-color: #00274d;
