--- a/index.html
+++ b/index.html
@@ -403,12 +403,12 @@
         <div class="summary" id="resumen">
             <h3><i class="fas fa-clipboard-list"></i> CARGOS SELECCIONADOS</h3>
             <ul id="lista-cargos"></ul>
-            <p><strong>Total Minutos:</strong> <span id="total-min">0</span></p>
-            <p><strong>Fianza:</strong> <span id="estado-fianza">0</span></p>
+            <p><strong>Total Minutos:</strong> <span id="total-min">$0</span></p>
+            <p><strong>Fianza:</strong> <span id="estado-fianza">$0</span></p>
             <p><strong>Multas:</strong> <span id="total-multas" class="valor-monetario">$0</span> <span id="limite-multas-mensaje" class="fianza-limite" style="display: none;">LÍMITE ALCANZADO</span></p>
             <p id="Resto-container" style="display: none;"><strong>Resto (/multar):</strong> <span id="Resto-multas" class="valor-monetario">$0</span></p>
             <p><strong>Multas por balas:</strong> <span id="total-balas" class="valor-monetario">$0</span></p>
-            <p><strong>Total por multar:</strong> <span id="total-por-multar" class="valor-monetario">$0</span></p>
+            <p><strong>Multa total:</strong> <span id="total-por-multar" class="valor-monetario">$0</span></p>
             <div style="margin-top: 15px;">
                 <button id="limpiar-seleccion" style="background-color: #e74c3c; color: white; border: none; padding: 10px 15px; border-radius: 5px; font-weight: bold; cursor: pointer; margin-right: 10px;">
                     Limpiar selección
@@ -434,7 +434,7 @@
                 <tr>
                     <td>Desacato</td>
                     <td>18 min</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
@@ -446,43 +446,43 @@
                 <tr>
                     <td>Porte de arma de fuego ilegal</td>
                     <td>120 min</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Robo con arma de fuego</td>
                     <td>96 min</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Intento de Homicidio</td>
                     <td>36 min</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-obligatoria">OBLIGATORIA</span></td>
                 </tr>
                 <tr>
                     <td>Porte de arma de fuego sin licencia</td>
                     <td>36 min</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Homicidio</td>
                     <td>192 min</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-sin">SIN FIANZA</span></td>
                 </tr>
                 <tr>
                     <td>Obstrucción al Deber Público</td>
                     <td>48 min</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-obligatoria">OBLIGATORIA</span></td>
                 </tr>
                 <tr>
                     <td>Disparo con arma de fuego</td>
                     <td>48 min</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
             </tbody>
@@ -586,28 +586,28 @@
                     <td>Artículo 2</td>
                     <td>Incitación de un disturbio</td>
                     <td>12 min a 36 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 2.1</td>
                     <td>Manifestación</td>
                     <td>4 min a 10 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 3</td>
                     <td>Soborno</td>
                     <td>24 min a 48 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 4</td>
                     <td>Intimidación de testigos</td>
                     <td>96 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
@@ -621,21 +621,21 @@
                     <td>Artículo 6</td>
                     <td>Obstrucción del deber público</td>
                     <td>48 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-obligatoria">OBLIGATORIA</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 7</td>
                     <td>Uso indebido de la línea de emergencia</td>
                     <td>4 min a 12 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-obligatoria">OBLIGATORIA</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 8</td>
                     <td>Resistencia al arresto</td>
                     <td>8 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
@@ -649,14 +649,14 @@
                     <td>Artículo 10</td>
                     <td>Suplantación de identidad</td>
                     <td>96 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 11</td>
                     <td>Corrupción de la Oficina Pública</td>
                     <td>24 min a 96 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
@@ -670,7 +670,7 @@
                     <td>Artículo 13</td>
                     <td>Intimidación de testigos</td>
                     <td>12 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
@@ -700,56 +700,56 @@
                     <td>Artículo 1</td>
                     <td>Robo con arma blanca</td>
                     <td>24 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 2</td>
                     <td>Robo con arma de fuego</td>
                     <td>96 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 3</td>
                     <td>Disparo con arma de fuego</td>
                     <td>12 minutos a 48 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 4</td>
                     <td>Intento de lesión</td>
                     <td>12 minutos a 18 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 5</td>
                     <td>Lesión</td>
                     <td>24 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 6</td>
                     <td>Intento de homicidio</td>
                     <td>36 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-obligatoria">OBLIGATORIA</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 7</td>
                     <td>Homicidio</td>
                     <td>96 min a 192 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-sin">SIN FIANZA</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 7.1</td>
                     <td>Múltiple homicidio</td>
                     <td>192 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-sin">SIN FIANZA</span></td>
                 </tr>
                 <tr>
@@ -763,14 +763,14 @@
                     <td>Artículo 9</td>
                     <td>Secuestro</td>
                     <td>144 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-sin">SIN FIANZA</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 10</td>
                     <td>Extorsión</td>
                     <td>96 a 192 min</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-obligatoria">OBLIGATORIA</span></td>
                 </tr>
                 <tr>
@@ -784,42 +784,42 @@
                     <td>Artículo 12</td>
                     <td>Falsificación o alteración de certificado</td>
                     <td>28 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 13</td>
                     <td>Estafa</td>
                     <td>12 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 14</td>
                     <td>Desacato</td>
                     <td>6 min a 18 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 15</td>
                     <td>Intento de hurto</td>
                     <td>de 6 a 48 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 16</td>
                     <td>Hurto</td>
                     <td>12 a 120 min</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 17</td>
                     <td>Escape de la custodia legal</td>
                     <td>36 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
             </tbody>
@@ -842,35 +842,35 @@
                     <td>Artículo 1</td>
                     <td>Vandalismo</td>
                     <td>15 min (calabozo)</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 2</td>
                     <td>Realizar necesidades en espacios públicos</td>
                     <td>15 min (calabozo)</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 3</td>
                     <td>Ocupación indebida de espacios públicos</td>
                     <td>15 min (calabozo)</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 4</td>
                     <td>Usurpación</td>
                     <td>6 a 36 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 5</td>
                     <td>Incendio</td>
                     <td>24 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
             </tbody>
@@ -893,21 +893,21 @@
                     <td>Artículo 1</td>
                     <td>Prostitución</td>
                     <td>12 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 2</td>
                     <td>Proxenetismo</td>
                     <td>120 a 480 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-obligatoria">OBLIGATORIA</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 3</td>
                     <td>Producción de sustancias ilícitas</td>
                     <td>48 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
@@ -935,28 +935,28 @@
                     <td>Artículo 7</td>
                     <td>Trafico ilícito de drogas</td>
                     <td>96 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-sin">SIN FIANZA</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 8</td>
                     <td>Abuso de alcohol o estupefacientes</td>
                     <td>15 min (calabozo)</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 9</td>
                     <td>Solicitud abusiva con acoso o coacción</td>
                     <td>15 min (calabozo)</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
                     <td>Artículo 10</td>
                     <td>Juegos de azar</td>
                     <td>15 min (calabozo)</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
@@ -998,7 +998,7 @@
                     <td>Artículo 16</td>
                     <td>Participación en desorden público</td>
                     <td>15 min (calabozo)</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
             </tbody>
@@ -1028,7 +1028,7 @@
                     <td>Artículo 2</td>
                     <td>Tenencia de arma de fuego sin licencia</td>
                     <td>36 minutos</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-opcional">OPCIONAL</span></td>
                 </tr>
                 <tr>
@@ -1091,7 +1091,7 @@
                     <td>Artículo 4</td>
                     <td>Venta ilícita de armas de fuego o explosivos</td>
                     <td>120 min</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-sin">SIN FIANZA</span></td>
                 </tr>
                 <tr>
@@ -1105,7 +1105,7 @@
                     <td>Artículo 6</td>
                     <td>Compra ilícita de armas de fuego</td>
                     <td>de 24 a 64 min</td>
-                    <td></td>
+                    <td>N/A</td>
                     <td style="text-align: center;"><span class="fianza-sin">SIN FIANZA</span></td>
                 </tr>
             </tbody>
