--- a/index.html
+++ b/index.html
@@ -489,6 +489,79 @@
             </tbody>
         </table>
 
+        <!-- Clasificación Legal de Armas -->
+        <div class="category">Clasificación Legal de Armas</div>
+        <table class="penalTable">
+            <thead>
+                <tr>
+                    <th>Tipo de Arma</th>
+                    <th>Estado Legal</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Sección de Armas Legales -->
+                <tr>
+                    <td colspan="2" style="background-color: #00274d; color: white; font-weight: bold; text-align: center; letter-spacing: 1px;">ARMAS LEGALES (Poseer con licencia)</td>
+                </tr>
+                <tr>
+                    <td>Desert Eagle</td>
+                    <td style="text-align: center;"><span class="fianza-obligatoria">LEGAL</span></td>
+                </tr>
+                <tr>
+                    <td>Colt 45</td>
+                    <td style="text-align: center;"><span class="fianza-obligatoria">LEGAL</span></td>
+                </tr>
+                <tr>
+                    <td>Rifle de asalto M4A1</td>
+                    <td style="text-align: center;"><span class="fianza-obligatoria">LEGAL</span></td>
+                </tr>
+                <tr>
+                    <td>Rifle de caza</td>
+                    <td style="text-align: center;"><span class="fianza-obligatoria">LEGAL</span></td>
+                </tr>
+                <tr>
+                    <td>Sub-fusil MP5</td>
+                    <td style="text-align: center;"><span class="fianza-obligatoria">LEGAL</span></td>
+                </tr>
+                
+                <!-- Sección de Armas Ilegales -->
+                <tr>
+                    <td colspan="2" style="background-color: #00274d; color: white; font-weight: bold; text-align: center; letter-spacing: 1px;">ARMAS ILEGALES (Prohibidas)</td>
+                </tr>
+                <tr>
+                    <td>Rifle de asalto AK-47</td>
+                    <td style="text-align: center;"><span class="fianza-sin">ILEGAL</span></td>
+                </tr>
+                <tr>
+                    <td>Escopeta recortada</td>
+                    <td style="text-align: center;"><span class="fianza-sin">ILEGAL</span></td>
+                </tr>
+                <tr>
+                    <td>Escopeta Remington</td>
+                    <td style="text-align: center;"><span class="fianza-sin">ILEGAL</span></td>
+                </tr>
+                <tr>
+                    <td>Sub-fusil TEC-9</td>
+                    <td style="text-align: center;"><span class="fianza-sin">ILEGAL</span></td>
+                </tr>
+                <tr>
+                    <td>Sub-fusil Uzi</td>
+                    <td style="text-align: center;"><span class="fianza-sin">ILEGAL</span></td>
+                </tr>
+                <tr>
+                    <td>Rifle de Francotirador</td>
+                    <td style="text-align: center;"><span class="fianza-sin">ILEGAL</span></td>
+                </tr>
+                
+                <!-- Nota sobre sables -->
+                <tr>
+                    <td colspan="2" style="text-align: center; font-style: italic; font-size: 0.9em;">
+                        Nota: La katana es considerada un sable (no es arma de fuego)
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
         <!-- Calculadora de Multas por Armas -->
         <div class="category calculadora-multas-category">Calculadora de Multas por Armas</div>
         <table class="multas-armas calculadora-multas">
