--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                     <td style="text-align: center;"><span class="fianza-obligatoria">LEGAL</span></td>
                 </tr>
                 <tr>
-                    <td>Rifle de asalto M4A1</td>
+                    <td>M4A1</td>
                     <td style="text-align: center;"><span class="fianza-obligatoria">LEGAL</span></td>
                 </tr>
                 <tr>
@@ -529,7 +529,7 @@
                     <td colspan="2" style="background-color: #00274d; color: white; font-weight: bold; text-align: center; letter-spacing: 1px;">ARMAS ILEGALES (Prohibidas)</td>
                 </tr>
                 <tr>
-                    <td>Rifle de asalto AK-47</td>
+                    <td>AK-47</td>
                     <td style="text-align: center;"><span class="fianza-sin">ILEGAL</span></td>
                 </tr>
                 <tr>
@@ -537,7 +537,7 @@
                     <td style="text-align: center;"><span class="fianza-sin">ILEGAL</span></td>
                 </tr>
                 <tr>
-                    <td>Escopeta Remington</td>
+                    <td>Escopeta remington</td>
                     <td style="text-align: center;"><span class="fianza-sin">ILEGAL</span></td>
                 </tr>
                 <tr>
