--- a/index.html
+++ b/index.html
@@ -533,11 +533,7 @@
                     <td style="text-align: center;"><span class="fianza-sin">ILEGAL</span></td>
                 </tr>
                 <tr>
-                    <td>Escopeta recortada</td>
-                    <td style="text-align: center;"><span class="fianza-sin">ILEGAL</span></td>
-                </tr>
-                <tr>
-                    <td>Escopeta remington</td>
+                    <td>Escopetas</td>
                     <td style="text-align: center;"><span class="fianza-sin">ILEGAL</span></td>
                 </tr>
                 <tr>
